# benchmarking

./: .gitignore  Makefile  Pipfile  README.md  circle.yml  ewasm_precompile_filler_generator.py  fill_benchmarks.sh  requirements.txt  run_benchmarks.sh
.circleci/: config.yml
C_ewasm_contracts/: sha256_nacl.c
benchmark_results_data/: cpuinfo.txt  evm_benchmarks.csv  geth_precompile_benchmarks.csv  native_benchmarks.csv  parity_precompile_benchmarks.csv  scout_bignum_benchmarks.csv  standalone_wasm_results.csv
charts/: generate-charts.py
evm-engines/cita-vm/: Dockerfile
evm-engines/evmone-evm384/: Dockerfile
evm-engines/evmraceresults/: evm_benchmarks_cita-vm.csv  evm_benchmarks_evmone.csv
evm-engines/geth/: Dockerfile
evm-engines/scripts/: benchevm.py  benchgethprecompiles.py  benchparityprecompiles.py
evm/cita-vm/: Dockerfile
evm/evmone/: Dockerfile
evm/evmone-evm384/: Dockerfile
evm/evmraceresults/: evm_benchmarks.csv  evm_benchmarks_cita-vm.csv  evm_benchmarks_evmone.csv  evm_benchmarks_geth.csv  evm_benchmarks_parity.csv  geth_precompile_benchmarks.csv  parity_precompile_benchmarks.csv
evm/geth/: Dockerfile
evm/parity/: Dockerfile
evm/scripts/: bench_evm384.py  benchevm.py  benchgethprecompiles.py  benchparityprecompiles.py  geth_ecpairing_precompile_rollup_input.patch  merge.py  run_bench.sh  run_evm384_bench.sh  run_precompiles_bench.sh
ewasm/: README.md  data_collection_helpers.py  ewasm_precompile_filler_generator.py  fill_benchmarks.sh  run_benchmarks.sh
ewasm/C_ewasm_contracts/: blake2b_ref.c  blake2b_ref_small.c  mul256.c  polynomial_evaluation_32bit.c  sha1_rhash.c  sha1_rhash_small.c
ewasm/filled/: blake2.json  blake2_rust.json  blake2b_ref.json  blake2b_ref_small.json  bls12pairing.json  bls12pairing_rust.json  ecadd.json  ecadd_rust.json  ecmul.json  ecmul_rust.json  ecpairing.json  ecpairing_rust.json  ecrecover.json  ed25519.json  ed25519_rust.json  identity.json  identity_rust.json  keccak256.json  keccak256_rhash.json  keccak256_rust.json  mul256.json  polynomial_evaluation_32bit.json  ripemd160.json  ripemd160_rust.json  sha1.json  sha1_rhash.json  sha1_rhash_small.json  sha1_rust.json  sha256.json  sha256_bcon.json  sha256_nacl.json  sha256_rhash.json  sha256_rust.json  wrc20_C.json  wrc20_handwritten_faster_get_balance.json  wrc20_handwritten_faster_transfer.json
ewasm/results/: 20190210_paul.txt  20190218_paul.txt  20190301_paul.txt  20190302_poemm.txt  README.md
ewasm/test_vectors/: README.md  ecpairing
ewasm/wasm/: blake2b_ref.wasm  blake2b_ref_small.wasm  mul256.wasm  mul256_C_standalone.wasm  sha1_rhash.wasm  sha1_rhash_small.wasm
filled/: bls12pairing.json  ed25519verify_tweetnacl.json  keccak256.json  keccak256_c_1.json  ripemd160.json  sha1.json  sha256.json  sha256_c_1.json  sha256_c_2.json  sha256_c_3.json
keccak/rusttinykeccak/: Cargo.toml  chisel.toml
notebooks/: scrape_notebook_images.py  wasm-engines.ipynb  wasm-engines.py
precompiles/: Makefile  c_undefined.syms  sha256_c_2.c
results/: 20181211_paul.txt
scout-engines/: Dockerfile  run_benchmarks.sh  scout_bignum_bench.py
scripts/: .generate_report.py.swp  generate_report.py  plot_util.py
source/: ed25519verify_c_tweetnacl.c  keccak256_c_1.c  sha256_c_2.c  sha256_c_3.c
wasm/: Cargo.toml  README.md  create_tests.py  life  run.py
wasm-engines/: Dockerfile  bench_native.py  bench_wasm_and_native.sh  benchmeteredstandalone.sh  benchnativerust_prepwasm.py  build_engines.sh  dockerseccompprofile.json  fizzy.sh  main.py  node-timer.js  prep_rust.sh  run.sh  run_benchmarks.sh  wamr_aot.sh
wasm-engines/docker/: asmble.Dockerfile  bench-build-base.Dockerfile  bench.Dockerfile  eos-vm.Dockerfile  fizzy.Dockerfile  life.Dockerfile  llvm-10.Dockerfile  ssvm.Dockerfile  vanilla-wabt.Dockerfile  wabt.Dockerfile  wagon.Dockerfile  wamr.Dockerfile  wasm-engines-bench.Dockerfile  wasm3.Dockerfile  wasmi.Dockerfile  wasmtime.Dockerfile  wavm.Dockerfile
wasm-engines/fluence_bencher/: .WasmVMBencher.py.swp  .settings.py.swp  VMDescriptor.py  WasmVMBencher.py  settings.py
wasm-engines/inputvectors/: blake2b-inputs.json  bls12-381-inputs.json  bn128_add-inputs.json  bn128_mul-inputs.json  bn128_pairing-inputs.json  ecrecover-inputs.json  ed25519-inputs.json  keccak256-inputs.json  modexp-inputs.json  sha1-inputs.json  sha256-inputs.json
wasm-engines/project/: VMDescriptor.py  WasmVMBencher.py  settings.py
wasm-engines/results/: cpuinfo.txt
wasm-engines/rust-code/bls12-381/: Cargo.toml
wasm-engines/rust-code/bls12-381/crate-override/: Cargo.toml
wasm-engines/rust-code/bls12-381/crate-override/src/: lib.rs
wasm-engines/rust-code/bls12-381/src/: bench.rs
wasm-engines/rust-code/bn128_pairing/: Cargo.toml
wasm-engines/rust-code/bn128_pairing/src/: bench.rs
wasm-engines/rust-code/ed25519/: Cargo.toml
wasm-engines/rust-code/ed25519/src/: bench.rs
wasm-engines/rust-code/eip1962_bls_12_381/: Cargo.toml  Pipfile  gen_pairing_test.py
wasm-engines/rust-code/eip1962_bls_12_381/src/: .bench.rs.swp  .main.rs.swp  bench.rs  main.rs
wasm-engines/rust-code/sha1/: Cargo.toml
wasm-engines/rust-code/sha1/src/: bench.rs
wasm-engines/scripts/: Pipfile  bench_native.py  bench_wasm.py  fill_rust.py  fill_rust.sh  fizzy.sh  requirements.txt  wamr_aot.sh  wasm_minify.sh
wasm-engines/scripts/rust-code-filled/blake2b/: Cargo.toml
wasm-engines/scripts/rust-code-filled/blake2b/src/: bench.rs
wasm-engines/scripts/rust-code-filled/modexp/: Cargo.toml
wasm-engines/scripts/rust-code-filled/modexp/src/: bench.rs
wasm-engines/scripts/rust-code-filled/mul256/: Cargo.toml
wasm-engines/scripts/rust-code-filled/mul256/src/: bench.rs  lib.rs
wasm/src/: life
wasm/src/templates/ed25519/: Cargo.toml
wasm/src/templates/ed25519/src/: lib.rs
(+53 files in other folders)
