[package]
name = "bn128_pairing-bench"
version = "0.1.0"
edition = "2018"

[dependencies]
ethereum-bn128 = { git = "https://github.com/ewasm/ethereum-bn128.rs", tag = "0.0.1" }
parity-bytes = { git = "https://github.com/paritytech/parity-common" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.2"

[lib]
name = "bn128_pairing_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "bn128_pairing_native"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
