[package]
name = "ed25519-bench"
version = "0.1.0"
authors = ["cdetrio", "Jared Wasinger <j-wasinger@hotmail.com>"]
edition = "2018"

[dependencies]
parity-bytes = { git = "https://github.com/paritytech/parity-common" }
sha2 = "0.7.1"

[dependencies.rand]
version = "^0.5.5"

[dependencies.ed25519-dalek]
version = "^0.8.0"

[dependencies.clear_on_drop]
features = ["no_cc"]
version = "^0.2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.2"

[lib]
name = "ed25519_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ed25519_native"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
