[package]
name = "ewasm-precompile-modexp-bench"
version = "0.1.0"
authors = ["cdetrio", "Guillaume Ballet <gballet@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Ethereum modexp precompile in Rust"
publish = false

[dependencies]
num = {version = "0.1.36", default-features = false}
num-bigint = {version = "0.1.36", default-features = false}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.2"

[lib]
name = "modexp_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "modexp_native"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
