[package]
name = "ewasm-mul256"
version = "0.1.0"
license = "Apache-2.0"
description = "Ethereum mul256 benchmark in Rust"
publish = false
edition = "2018"

[dependencies]
bigint = "4.4.1"
wee_alloc = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.3"

[lib]
name = "mul256_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "mul256_native"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"