[package]
name = "ed25519"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
edition = "2018"

[dependencies]
parity-bytes = { git = "https://github.com/paritytech/parity-common" }
hex = "0.3.1"
sha2 = "0.7.1"

[dependencies.rand]
version = "^0.5.5"

[dependencies.ed25519-dalek]
version = "^0.8.0"

[dependencies.clear_on_drop]
features = ["no_cc"]
version = "^0.2.3"

[lib]
crate-type = ["cdylib"]
